blue/bsp/src/bindings.rs

extern "C" {
    pub fn rt_device_register(
        dev: rt_device_t,
        name: *const core::ffi::c_char,
        flags: rt_uint16_t,
    ) -> rt_err_t;
}
extern "C" {
    pub fn rt_device_unregister(dev: rt_device_t) -> rt_err_t;
}
extern "C" {
    pub fn rt_device_create(type_: core::ffi::c_int, attach_size: core::ffi::c_int) -> rt_device_t;
}
extern "C" {
    pub fn rt_device_destroy(device: rt_device_t);
}
extern "C" {
    pub fn rt_device_set_rx_indicate(
        dev: rt_device_t,
        rx_ind: ::core::option::Option<
            unsafe extern "C" fn(dev: rt_device_t, size: rt_size_t) -> rt_err_t,
        >,
    ) -> rt_err_t;
}
extern "C" {
    pub fn rt_device_set_tx_complete(
        dev: rt_device_t,
        tx_done: ::core::option::Option<
            unsafe extern "C" fn(dev: rt_device_t, buffer: *mut core::ffi::c_void) -> rt_err_t,
        >,
    ) -> rt_err_t;
}
extern "C" {
    pub fn rt_device_init(dev: rt_device_t) -> rt_err_t;
}
extern "C" {
    pub fn rt_device_open(dev: rt_device_t, oflag: rt_uint16_t) -> rt_err_t;
}
extern "C" {
    pub fn rt_device_close(dev: rt_device_t) -> rt_err_t;
}
extern "C" {
    pub fn rt_device_read(
        dev: rt_device_t,
        pos: rt_off_t,
        buffer: *mut core::ffi::c_void,
        size: rt_size_t,
    ) -> rt_ssize_t;
}
extern "C" {
    pub fn rt_device_write(
        dev: rt_device_t,
        pos: rt_off_t,
        buffer: *const core::ffi::c_void,
        size: rt_size_t,
    ) -> rt_ssize_t;
}
extern "C" {
    pub fn rt_device_control(
        dev: rt_device_t,
        cmd: core::ffi::c_int,
        arg: *mut core::ffi::c_void,
    ) -> rt_err_t;
}
extern "C" {
    pub fn rt_interrupt_enter();
}
extern "C" {
    pub fn rt_interrupt_leave();
}
extern "C" {
    pub fn rt_interrupt_get_nest() -> rt_uint8_t;
}
extern "C" {
    pub fn rt_components_init();
}
extern "C" {
    pub fn rt_components_board_init();
}
extern "C" {
    pub fn rt_kprintf(fmt: *const core::ffi::c_char, ...) -> core::ffi::c_int;
}
extern "C" {
    pub fn rt_kputs(str_: *const core::ffi::c_char);
}
extern "C" {
    pub fn rt_vsprintf(
        dest: *mut core::ffi::c_char,
        format: *const core::ffi::c_char,
        arg_ptr: va_list,
    ) -> core::ffi::c_int;
}
extern "C" {
    pub fn rt_vsnprintf(
        buf: *mut core::ffi::c_char,
        size: rt_size_t,
        fmt: *const core::ffi::c_char,
        args: va_list,
    ) -> core::ffi::c_int;
}
extern "C" {
    pub fn rt_sprintf(
        buf: *mut core::ffi::c_char,
        format: *const core::ffi::c_char,
        ...
    ) -> core::ffi::c_int;
}
extern "C" {
    pub fn rt_snprintf(
        buf: *mut core::ffi::c_char,
        size: rt_size_t,
        format: *const core::ffi::c_char,
        ...
    ) -> core::ffi::c_int;
}
extern "C" {
    pub fn rt_console_set_device(name: *const core::ffi::c_char) -> rt_device_t;
}
extern "C" {
    pub fn rt_console_get_device() -> rt_device_t;
}
extern "C" {
    pub fn rt_get_errno() -> rt_err_t;
}
extern "C" {
    pub fn rt_set_errno(no: rt_err_t);
}
extern "C" {
    pub fn _rt_errno() -> *mut core::ffi::c_int;
}
extern "C" {
    pub fn rt_strerror(error: rt_err_t) -> *const core::ffi::c_char;
}
extern "C" {
    pub fn __rt_ffs(value: core::ffi::c_int) -> core::ffi::c_int;
}
extern "C" {
    pub fn rt_memset(
        src: *mut core::ffi::c_void,
        c: core::ffi::c_int,
        n: rt_ubase_t,
    ) -> *mut core::ffi::c_void;
}
extern "C" {
    pub fn rt_memcpy(
        dest: *mut core::ffi::c_void,
        src: *const core::ffi::c_void,
        n: rt_ubase_t,
    ) -> *mut core::ffi::c_void;
}
extern "C" {
    pub fn rt_memmove(
        dest: *mut core::ffi::c_void,
        src: *const core::ffi::c_void,
        n: rt_size_t,
    ) -> *mut core::ffi::c_void;
}
extern "C" {
    pub fn rt_memcmp(
        cs: *const core::ffi::c_void,
        ct: *const core::ffi::c_void,
        count: rt_size_t,
    ) -> rt_int32_t;
}
extern "C" {
    pub fn rt_strdup(s: *const core::ffi::c_char) -> *mut core::ffi::c_char;
}
extern "C" {
    pub fn rt_strnlen(s: *const core::ffi::c_char, maxlen: rt_ubase_t) -> rt_size_t;
}
extern "C" {
    pub fn rt_strstr(
        str1: *const core::ffi::c_char,
        str2: *const core::ffi::c_char,
    ) -> *mut core::ffi::c_char;
}
extern "C" {
    pub fn rt_strcasecmp(a: *const core::ffi::c_char, b: *const core::ffi::c_char) -> rt_int32_t;
}
extern "C" {
    pub fn rt_strcpy(
        dst: *mut core::ffi::c_char,
        src: *const core::ffi::c_char,
    ) -> *mut core::ffi::c_char;
}
extern "C" {
    pub fn rt_strncpy(
        dest: *mut core::ffi::c_char,
        src: *const core::ffi::c_char,
        n: rt_size_t,
    ) -> *mut core::ffi::c_char;
}
extern "C" {
    pub fn rt_strncmp(
        cs: *const core::ffi::c_char,
        ct: *const core::ffi::c_char,
        count: rt_size_t,
    ) -> rt_int32_t;
}
extern "C" {
    pub fn rt_strcmp(cs: *const core::ffi::c_char, ct: *const core::ffi::c_char) -> rt_int32_t;
}
extern "C" {
    pub fn rt_strlen(src: *const core::ffi::c_char) -> rt_size_t;
}
extern "C" {
    pub fn rt_show_version();
}
extern "C" {
    pub static mut rt_assert_hook: ::core::option::Option<
        unsafe extern "C" fn(
            ex: *const core::ffi::c_char,
            func: *const core::ffi::c_char,
            line: rt_size_t,
        ),
    >;
}
extern "C" {
    pub fn rt_assert_set_hook(
        hook: ::core::option::Option<
            unsafe extern "C" fn(
                ex: *const core::ffi::c_char,
                func: *const core::ffi::c_char,
                line: rt_size_t,
            ),
        >,
    );
}
extern "C" {
    pub fn rt_assert_handler(
        ex: *const core::ffi::c_char,
        func: *const core::ffi::c_char,
        line: rt_size_t,
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_ringbuffer {
    pub buffer_ptr: *mut rt_uint8_t,
    pub _bitfield_align_1: [u32; 0],
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 8usize]>,
    pub buffer_size: rt_int32_t,
}
#[test]
fn bindgen_test_layout_rt_ringbuffer() {
    const UNINIT: ::core::mem::MaybeUninit<rt_ringbuffer> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_ringbuffer>(),
        16usize,
        concat!("Size of: ", stringify!(rt_ringbuffer))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_ringbuffer>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_ringbuffer))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).buffer_ptr) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_ringbuffer),
            "::",
            stringify!(buffer_ptr)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).buffer_size) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_ringbuffer),
            "::",
            stringify!(buffer_size)
        )
    );
}
impl rt_ringbuffer {
    #[inline]
    pub fn read_mirror(&self) -> rt_uint32_t {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_read_mirror(&mut self, val: rt_uint32_t) {
        unsafe {
            let val: u32 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn read_index(&self) -> rt_uint32_t {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(1usize, 31u8) as u32) }
    }
    #[inline]
    pub fn set_read_index(&mut self, val: rt_uint32_t) {
        unsafe {
            let val: u32 = ::core::mem::transmute(val);
            self._bitfield_1.set(1usize, 31u8, val as u64)
        }
    }
    #[inline]
    pub fn write_mirror(&self) -> rt_uint32_t {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(32usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_write_mirror(&mut self, val: rt_uint32_t) {
        unsafe {
            let val: u32 = ::core::mem::transmute(val);
            self._bitfield_1.set(32usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn write_index(&self) -> rt_uint32_t {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(33usize, 31u8) as u32) }
    }
    #[inline]
    pub fn set_write_index(&mut self, val: rt_uint32_t) {
        unsafe {
            let val: u32 = ::core::mem::transmute(val);
            self._bitfield_1.set(33usize, 31u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        read_mirror: rt_uint32_t,
        read_index: rt_uint32_t,
        write_mirror: rt_uint32_t,
        write_index: rt_uint32_t,
    ) -> __BindgenBitfieldUnit<[u8; 8usize]> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 8usize]> = Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let read_mirror: u32 = unsafe { ::core::mem::transmute(read_mirror) };
            read_mirror as u64
        });
        __bindgen_bitfield_unit.set(1usize, 31u8, {
            let read_index: u32 = unsafe { ::core::mem::transmute(read_index) };
            read_index as u64
        });
        __bindgen_bitfield_unit.set(32usize, 1u8, {
            let write_mirror: u32 = unsafe { ::core::mem::transmute(write_mirror) };
            write_mirror as u64
        });
        __bindgen_bitfield_unit.set(33usize, 31u8, {
            let write_index: u32 = unsafe { ::core::mem::transmute(write_index) };
            write_index as u64
        });
        __bindgen_bitfield_unit
    }
}
pub const rt_ringbuffer_state_RT_RINGBUFFER_EMPTY: rt_ringbuffer_state = 0;
pub const rt_ringbuffer_state_RT_RINGBUFFER_FULL: rt_ringbuffer_state = 1;
pub const rt_ringbuffer_state_RT_RINGBUFFER_HALFFULL: rt_ringbuffer_state = 2;
pub type rt_ringbuffer_state = core::ffi::c_uchar;
extern "C" {
    #[doc = " RingBuffer for DeviceDriver\n\n Please note that the ring buffer implementation of RT-Thread\n has no thread wait or resume feature."]
    pub fn rt_ringbuffer_init(rb: *mut rt_ringbuffer, pool: *mut rt_uint8_t, size: rt_int32_t);
}
extern "C" {
    pub fn rt_ringbuffer_reset(rb: *mut rt_ringbuffer);
}
extern "C" {
    pub fn rt_ringbuffer_put(
        rb: *mut rt_ringbuffer,
        ptr: *const rt_uint8_t,
        length: rt_uint32_t,
    ) -> rt_size_t;
}
extern "C" {
    pub fn rt_ringbuffer_put_force(
        rb: *mut rt_ringbuffer,
        ptr: *const rt_uint8_t,
        length: rt_uint32_t,
    ) -> rt_size_t;
}
extern "C" {
    pub fn rt_ringbuffer_putchar(rb: *mut rt_ringbuffer, ch: rt_uint8_t) -> rt_size_t;
}
extern "C" {
    pub fn rt_ringbuffer_putchar_force(rb: *mut rt_ringbuffer, ch: rt_uint8_t) -> rt_size_t;
}
extern "C" {
    pub fn rt_ringbuffer_get(
        rb: *mut rt_ringbuffer,
        ptr: *mut rt_uint8_t,
        length: rt_uint32_t,
    ) -> rt_size_t;
}
extern "C" {
    pub fn rt_ringbuffer_peek(rb: *mut rt_ringbuffer, ptr: *mut *mut rt_uint8_t) -> rt_size_t;
}
extern "C" {
    pub fn rt_ringbuffer_getchar(rb: *mut rt_ringbuffer, ch: *mut rt_uint8_t) -> rt_size_t;
}
extern "C" {
    pub fn rt_ringbuffer_data_len(rb: *mut rt_ringbuffer) -> rt_size_t;
}
extern "C" {
    pub fn rt_ringbuffer_create(length: rt_uint32_t) -> *mut rt_ringbuffer;
}
extern "C" {
    pub fn rt_ringbuffer_destroy(rb: *mut rt_ringbuffer);
}
#[doc = " Completion"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_completion {
    pub flag: rt_uint32_t,
    pub suspended_list: rt_list_t,
}
